SIF-16: fix swagger
